# snark-verifier

./: Cargo.toml
snark-verifier/: Cargo.toml
snark-verifier-sdk/: Cargo.toml
snark-verifier-sdk/src/: halo2.rs  lib.rs
